# penny_pincher

./: Procfile  README.md  manage.py  pyproject.toml  requirements.txt
.github/workflows/: github_actions.yml
docs/: requirements.md  workflow.md
penny_pincher/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/partials/: _footer.html
templates/ticket_search/: about.html  history.html  home.html  results.html  search.html  wait.html
templates/users/: login.html  logout.html  profile.html  register.html
ticket_search/: admin.py  apps.py  forms.py  functions.py  models.py  tests.py  urls.py  views.py
ticket_search/migrations/: 0001_initial.py  0002_auto_20200815_2337.py  0003_auto_20200815_2338.py  0004_searchquery_error.py  0005_auto_20200819_2120.py  0006_auto_20200819_2142.py
ticket_search/static/css/: home.css  style.css  wait.css
ticket_search/static/js/: history.js  main.js  results.js  search.js  wait.js
users/: forms.py  urls.py  views.py
