[tool.poetry]
name = "penny-pincher"
version = "0.1.0"
description = ""
authors = ["Leo Kukharau <kuhorev.leonid@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.7"
django = "^3.1"
selenium = "^3.141.0"
django-crispy-forms = "^1.9.2"
django-environ = "^0.4.5"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.5"
psycopg2 = "^2.8.5"
django-heroku = "^0.3.1"
django-background-tasks = "^1.2.5"
bs4 = "^0.0.1"
lxml = "^4.5.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pylint-django = "^2.3.0"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
